--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ body {
     background-color: #fff;
     box-shadow: 0px 8px 28px rgba(0, 0, 0, 0.1);
     position: fixed;
+    z-index: 1030;
     width: 100%;
   }
   
@@ -25,7 +26,7 @@ body {
     display: block;
     color: #000;
     text-align: center;
-    padding: 18px 16px;
+    padding: 17px 16px;
     text-decoration: none;
     font-size: 17px; 
   } 
@@ -36,40 +37,53 @@ body {
   }
   
   .topnav a.active {
-    background-color: #04AA6D;
+    background-color: #198754;
     color: white;
   }
   .topnav .icon {
     display: none;
   } 
   
-  @media screen and (max-width: 768px) {
+@media screen and (max-width: 479px) {
     .topnav a:not(:first-child) {display: none;}
     .topnav a.icon {
-      float: right;
-      display: block;
+        float: right;
+        display: block;
     }
-  }
-  
-  @media screen and (max-width: 768px) {
+}
+
+@media screen and (max-width: 479px) {
     .topnav.responsive {position: relative;}
     .topnav.responsive .icon {
-      position: absolute;
-      right: 0;
-      top: 0;
+        position: absolute;
+        right: 0;
+        top: 0;
     }
     .topnav.responsive a {
-      float: none;
-      display: block;
-      text-align: left;
+        float: none;
+        display: block;
+        text-align: left;
     }
-  }
+}
 
-
-@media only screen and (max-width: 768px){
-    section .row{
+@media only screen and (max-width: 786  px) {
+    .topnav{
+        width: 100%;
+    }
+    section .row {
         flex-direction: column;
         text-align: center;
+    }
+    .call-action h1{
+        font-size: 10px;
+    }
+    .call-to-action p{
+        font-size: 15px;
+        text-align: center;
+    }
+    .row-item img{
+        width: 50%;
+        height: 100px;  
     }
     .box{
         width: 100%;
@@ -106,8 +120,16 @@ body {
     }
     .displayunit .writing-img img{
         width: 100%;
+    } 
+} 
+ @media screen and (max-width:497px) {
+    section .row{
+        flex-direction: column;
     }
-}
+    .call-action p{
+        font-size: 2em;
+    }
+ }
 /* 1st container */
  p{
     font-size: 1.5rem;
@@ -116,11 +138,12 @@ body {
     padding: 5px;
 }
 span{
-    color:#f4b100 ;
+    color:#ffc107 ;
 }
 .row {
     display: flex;
     flex-direction: row;
+    justify-content: space-evenly;
     padding: 20px;
     line-height: 2.5rem;
     text-align: left;
@@ -129,32 +152,54 @@ span{
 .row-item{
     text-align: left;
     font-size: 20px;
-    margin-top: 70px;
-    margin-left: 40px;
+    margin-top: 10%;
+    margin-left: 5%;
 }
-.row-item img {
-    font-size: 1rem;
-    width: 450px;
-    height: 450px;
-    margin-right: 50px;
+.row-item-img {
+    max-width: 700px;
+    width: 90%;
+    margin-top: 75px;
+/*     max-width: 500px;
+    */ height: auto;
+    margin-right: 75px;
+}
+.text-center{
+    color: #212529;
+    font: 16px raleway,sans-serif;
+}
+.call-action{
+    color: #212529;
+    margin-top: 50px;
+    white-space: nowrap;
+    line-height: 2.2rem;
+}
+.call-action h1{
+    font-size: 30px;
+    margin-bottom: 10px;
+}
+.call-action h3{
+    margin-bottom: 13px;
+    font: 23px raleway,sans-serif;
+}
+.call-action p{
+    font: 18px raleway,sans-serif;
+}
+p{
+    display: block;
 }
 .call-to-action{
-    margin-top: 1rem;
+    color: #212529;
+    margin-top: 1.5rem;
     line-height: 1.7rem;
 }
 .call-to-action p{
-    font-size: 1.2rem;
+    font-size: 1.3rem;
+    font-weight: 300;
+    width: 90%;
 }
 .word-space{
     line-height: 5rem;
     margin-left: 5px;
-}
-.call-action{
-    margin-top: 50px;
-    white-space: nowrap;
-}
-.call-action p{
-    font-size: 1.3rem;
 }
 h2{
     text-align: center;
@@ -163,10 +208,11 @@ h2{
     width: 80px;
     font-size: 20px;
     padding: 8px;
-    background-color: rgb(4, 105, 4);
+    background-color:#198754;
     color: white;
     border-top-left-radius: 20px;
     border-bottom-right-radius: 20px;
+    line-height: 1rem;
 }
 a{
     text-decoration: none;
@@ -300,6 +346,7 @@ section .background{
 }
 .set {
     line-height: 2.5rem;
+    font-size: 22px;
 }
 .set a{
     background-color: darkgreen;
@@ -317,6 +364,7 @@ hr {
 }
 .wrap p{
     text-align: center;
+    font-size: 20px;
 }
 /* footer */
 .design{
