--- a/css/text.css
+++ b/css/text.css
@@ -7,18 +7,22 @@ body{
     background-color: white;
     min-height: 100vh;
 }
-@media screen and (max-width:768px){
+@media screen and (max-width:768px) {
     form input{
         padding: 10px;
+    }
+    .main a{
+        padding-left: 75px !important;
+        padding-right: 75px !important;
     }
 }
 
 .row{ 
-    width: 75%;
+    max-width: 700px;
+    width: 90%;
     margin: 0 auto;
     padding: 20px;
     box-shadow: 0px 8px 28px;
-    border-radius: 2rem 2rem 2rem 2rem;
     text-align: center; 
     margin-top: 20px;
 }
@@ -47,8 +51,8 @@ h1{
     border-radius: 20px;    
     background-color: darkgreen;
     padding: 5px;
-    padding-left: 100px;
-    padding-right: 100px ;
+    padding-left: 88px;
+    padding-right: 85px;
     color: white;
     text-decoration: none;
     font-size: 23px;
