--- a/css/style.css
+++ b/css/style.css
@@ -1,59 +1,66 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-html{
+
+html {
     scroll-behavior: smooth;
 }
+
 body {
     min-height: 100vh;
     font-family: Arial, Helvetica, sans-serif;
     scroll-behavior: smooth;
-  }
-  
-  .topnav {
+}
+
+.topnav {
     overflow: hidden;
     background-color: #fff;
-    box-shadow: 0px 8px 28px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 8px 28px rgba(0, 0, 0, 0.5);
     position: fixed;
     z-index: 1030;
     width: 100%;
-  }
-  
-  .topnav a {
+}
+
+.topnav a {
     float: left;
     display: block;
     color: #000;
     text-align: center;
     padding: 17px 16px;
     text-decoration: none;
-    font-size: 17px; 
-  } 
-  
-    .topnav a:hover {
+    font-size: 17px;
+}
+
+.topnav a:hover {
     background-color: #ddd;
     color: black;
-  }
-  
-  .topnav a.active {
+}
+
+.topnav a.active {
     background-color: #198754;
     color: white;
-  }
-  .topnav .icon {
+}
+
+.topnav .icon {
     display: none;
-  } 
-  
-@media screen and (max-width: 479px) {
-    .topnav a:not(:first-child) {display: none;}
+}
+
+@media only screen and (max-width: 768px) {
+    .topnav a:not(:first-child) {
+        display: none;
+    }
     .topnav a.icon {
         float: right;
         display: block;
     }
 }
 
-@media screen and (max-width: 479px) {
-    .topnav.responsive {position: relative;}
+@media only screen and (max-width: 768px) {
+    .topnav.responsive {
+        position: relative;
+    }
     .topnav.responsive .icon {
         position: absolute;
         right: 0;
@@ -66,315 +73,367 @@ body {
     }
 }
 
-@media only screen and (max-width: 786  px) {
-    .topnav{
-        width: 100%;
-    }
-    section .row {
-        flex-direction: column;
-        text-align: center;
-    }
-    .call-action h1{
-        font-size: 10px;
-    }
-    .call-to-action p{
-        font-size: 15px;
-        text-align: center;
-    }
-    .row-item img{
-        width: 50%;
-        height: 100px;  
-    }
-    .box{
-        width: 100%;
-        justify-content: center;
-        text-align :center;
-        margin: 20px auto; 
-    }
-    .writing .middi{
-        line-height: 2.1rem;
-        font-size: 30px;
-    }
-    .align-item{
-        justify-content: center;
-    }
-    .word-space{
-        text-align: center;
-    }
-    .row-item img{
-        width: 10%;
-        margin: 0 5px;
-    }
-    section .page{
-        flex-direction: column;
-        margin-left: 15px;
-    }
-    section .role{
-        flex-direction: column;
-    }
-    .role .img-size img{
-        width:100%;
-    }
-    section .displayunit{
-        flex-direction: column;
-    }
-    .displayunit .writing-img img{
-        width: 100%;
-    } 
-} 
- @media screen and (max-width:497px) {
-    section .row{
-        flex-direction: column;
-    }
-    .call-action p{
-        font-size: 2em;
-    }
- }
+
 /* 1st container */
- p{
-    font-size: 1.5rem;
- }
-.container {
-    padding: 5px;
+
+span {
+    color: #ffc107;
 }
-span{
-    color:#ffc107 ;
-}
+
 .row {
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
-    padding: 20px;
-    line-height: 2.5rem;
-    text-align: left;
-    width: 100%;
+    justify-content: space-around;
+    align-items: center;
+    padding: 80px 100px;
 }
-.row-item{
-    text-align: left;
-    font-size: 20px;
-    margin-top: 10%;
-    margin-left: 5%;
-}
-.row-item-img {
-    max-width: 700px;
-    width: 90%;
-    margin-top: 75px;
-/*     max-width: 500px;
-    */ height: auto;
-    margin-right: 75px;
-}
-.text-center{
-    color: #212529;
-    font: 16px raleway,sans-serif;
-}
-.call-action{
-    color: #212529;
-    margin-top: 50px;
-    white-space: nowrap;
-    line-height: 2.2rem;
-}
-.call-action h1{
+
+.call-action h1 {
     font-size: 30px;
     margin-bottom: 10px;
+    white-space: nowrap;
 }
-.call-action h3{
+
+.call-action h3 {
     margin-bottom: 13px;
-    font: 23px raleway,sans-serif;
+    font: 23px raleway, sans-serif;
+    white-space: nowrap;
 }
-.call-action p{
-    font: 18px raleway,sans-serif;
+
+.call-action p {
+    font: 17px raleway, sans-serif;
+    white-space: nowrap;
 }
-p{
+
+p {
     display: block;
 }
-.call-to-action{
+
+.call-to-action {
     color: #212529;
-    margin-top: 1.5rem;
+    margin-top: 10px;
     line-height: 1.7rem;
 }
-.call-to-action p{
-    font-size: 1.3rem;
-    font-weight: 300;
-    width: 90%;
+
+.call-to-action p {
+    font-size: 18px;
 }
-.word-space{
+
+.word-space {
     line-height: 5rem;
-    margin-left: 5px;
 }
-h2{
+
+h2 {
     text-align: center;
 }
-.item{
+
+.item {
     width: 80px;
     font-size: 20px;
     padding: 8px;
-    background-color:#198754;
+    background-color: #198754;
     color: white;
     border-top-left-radius: 20px;
     border-bottom-right-radius: 20px;
     line-height: 1rem;
 }
-a{
+
+a {
     text-decoration: none;
-} 
+}
+
 
 /* 2nd container */
-.contain{
+
+.contain {
     padding: 50px;
-    background-color:#f4f4f4; 
+    background-color: #f4f4f4;
 }
-.page{
+
+.page {
     display: flex;
     flex-direction: row;
 }
-.word-items{
+
+.word-items {
     padding: 1rem;
 }
-.big-g p{
+
+.big-g p {
     font-size: 30px;
     line-height: 4rem;
+    white-space: nowrap;
 }
-.word-wrap{
+
+.word-wrap {
     text-align: center;
     line-height: 1.5rem;
 }
-.box{
+
+.box {
     background: white;
     padding: 7px 15px;
-    box-shadow: 0px 8px 28px;
+    box-shadow: 0px 8px 28px rgba(0, 0, 0, 0.1);
     margin: 20px;
     max-width: 300px;
     word-wrap: break-word;
 }
-.box p{
+
+.box p {
     margin-top: 8px;
     place-content: center;
     word-wrap: break-word;
     font-size: 18px;
     line-height: 1.5rem;
 }
+
 .input {
     font-size: 20px;
 }
 
+
 /* 3rd container */
-.block{
+
+.block {
     padding: 2rem;
 }
-.role{
+
+.role {
     display: flex;
     flex-direction: row;
     padding: 1rem;
 }
-h4{
+
+h4 {
     font-size: 1.8rem;
 }
-.img-size{
+
+.img-size {
     margin-top: 10px;
     font-size: 1rem;
     margin-left: 0;
 }
+
 .quality {
     margin-top: 2rem;
     line-height: 2rem;
 }
-.quality p{
-    font-size: 20px;
+
+.quality p {
+    font-size: 17px;
 }
-.word-spacing{
+
+.word-spacing {
     margin-top: 1rem;
     line-height: 2rem;
 }
+
 .word-spacing p {
-    font-size: 1.5rem;
+    font-size: 18px;
 }
 
+.dataprint h4 {
+    white-space: nowrap;
+}
+
+
 /* 4th container */
-.display{
-    background-color:/*  rgb(39, 38, 38) */#000;
+
+.display {
+    background-color: /*  rgb(39, 38, 38) */
+    #000;
     color: white;
-    padding: 1rem;
+    padding: 50px;
     margin-top: 20px;
 }
-.displayunit{
+
+.displayunit {
     display: flex;
     flex-direction: row;
     padding: 20px;
 }
-.writing{
-    margin-left: 10px;
-}
-.average{
+
+.average {
     font-size: 2rem;
 }
-.middi{
+
+.middi {
     line-height: 2.3rem;
     margin-top: 20px;
-    width: 90%;
-    font-size: 30px;
+    font-size: 23px;
 }
-.middi h4{
-    font-size: 1.7rem;
-}
-.biggi{
+
+.biggi {
     margin-top: 2rem;
     font-size: 25px;
-    width: 90%;
     font-size: 1.3rem;
     line-height: 1.5rem;
 }
-img .writing-img{
+
+img .writing-img {
     font-size: medium;
 }
 
+
 /* 5th container */
-section .background{
+
+section .background {
     padding-top: 20px;
 }
-.background{
+
+.background {
     background-color: #f4f4f4;
 }
-.align h2{
+
+.align h2 {
     padding-top: 20px;
     font-size: 30px;
 }
-.space-btn{
+
+.space-btn {
     padding-top: 20px;
     text-align: center;
-    margin-right:20px ;
+    margin-right: 20px;
     white-space: nowrap;
 }
+
+.align-text h2 {
+    font-size: 30px;
+}
+
 .set {
     line-height: 2.5rem;
     font-size: 22px;
 }
-.set a{
+
+.set-p {
+    line-height: 2.5rem;
+    font-size: 22px;
+}
+
+.set a {
     background-color: darkgreen;
     color: white;
     padding: 0 5px;
 }
+
 .mg img {
-   margin:20px;
+    margin: 20px;
 }
+
 hr {
-    margin: 0 10px;
+    padding: 0 20px;
 }
-.caps{
+
+.caps {
     padding: 50px;
 }
-.wrap p{
+
+.wrap p {
     text-align: center;
     font-size: 20px;
 }
+
+.back-to-top {
+    border: 1px solid blue;
+    border-radius: 50%;
+    padding: 6px;
+    color: #fff;
+}
+
+
 /* footer */
-.design{
+
+.design {
     text-decoration: none;
     margin-top: 10px;
     margin-bottom: 20px;
     margin-left: 20px;
 }
-.design a{
+
+.design a {
     color: #000;
 }
 
-    
+@media only screen and (max-width:768px) {
+    .row {
+        flex-direction: column;
+        padding: 120px 100px;
+    }
+    .row-item-img {
+        width: 400px;
+    }
+    .call-action {
+        text-align: center;
+    }
+    .call-action p {
+        font-size: 16px;
+    }
+    .call-to-action {
+        text-align: center;
+    }
+    .call-to-action p {
+        font-size: 14px;
+    }
+    .word-space {
+        text-align: center;
+    }
+    .page {
+        flex-direction: column;
+    }
+    .contain {
+        padding: 20px;
+    }
+    .role {
+        flex-direction: column;
+    }
+    .row-img {
+        width: 320px;
+    }
+    .dataprint h4 {
+        font-size: 25px;
+    }
+    .displayunit {
+        flex-direction: column;
+    }
+    .writing {
+        text-align: left;
+    }
+    .img-item {
+        width: 290px;
+    }
+    .align h2 {
+        font-size: 22px;
+        padding: 10px 10px;
+        white-space: nowrap;
+    }
+    .space-btn {
+        flex-direction: column;
+        padding: 20px 30px;
+    }
+    .image {
+        width: 100px;
+    }
+    .space-btn {
+        text-align: center;
+        padding: 0 8px;
+        line-height: 2rem;
+    }
+    .align-text h2 {
+        font-size: 23px;
+        white-space: nowrap;
+        padding: 15px 0;
+    }
+    .set-p {
+        font-size: 19px;
+    }
+    hr {
+        width: 80%;
+    }
+    .wrap p {
+        white-space: nowrap;
+        font-size: 14px;
+        text-align: center;
+        margin-right: 10px;
+    }
+}
