--- a/css/text.css
+++ b/css/text.css
@@ -7,19 +7,18 @@ body{
     background-color: white;
     min-height: 100vh;
 }
-@media screen and (max-width:768px) {
-    form input{
-        padding: 10px;
-    }
-    .main a{
-        padding-left: 75px !important;
-        padding-right: 75px !important;
-    }
-}
-
 .row{ 
     max-width: 700px;
-    width: 90%;
+    width: 450px;
+    margin: 0 auto;
+    padding: 20px;
+    box-shadow: 0px 8px 28px;
+    text-align: center; 
+    margin-top: 20px;
+}
+.card{
+    max-width: 700px;
+    width: 450px;
     margin: 0 auto;
     padding: 20px;
     box-shadow: 0px 8px 28px;
@@ -67,4 +66,13 @@ div a{
 }
 .content{
     white-space: nowrap;
+}
+
+@media only screen and (max-width:768px){
+    .row{
+        width: 370px;
+    }
+    .card{
+        width: 370px;
+    }
 }
