--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body {
 .topnav {
     overflow: hidden;
     background-color: #fff;
-    box-shadow: 0px 8px 28px rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 8px 28px rgba(0, 0, 0, 0.1);
     position: fixed;
     z-index: 1030;
     width: 100%;
@@ -205,7 +205,7 @@ a {
 }
 
 h4 {
-    font-size: 1.8rem;
+    font-size: 20px;
 }
 
 .img-size {
@@ -361,7 +361,8 @@ hr {
         padding: 120px 100px;
     }
     .row-item-img {
-        width: 400px;
+        width: 300px;
+        /* max-width: 100%; */
     }
     .call-action {
         text-align: center;
@@ -425,7 +426,7 @@ hr {
         padding: 15px 0;
     }
     .set-p {
-        font-size: 19px;
+        font-size: 16px;
     }
     hr {
         width: 80%;
@@ -435,5 +436,8 @@ hr {
         font-size: 14px;
         text-align: center;
         margin-right: 10px;
+    }
+    h4 {
+        font-size: 15px;
     }
 }
